# pise

./: .coveragerc  .flaskenv  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  NOTICE  README.md  config.py  getg.py  pfsc.ini  purge_failed_jobs.py  pytest.ini  release_procedure.md  requirements.txt  startup.sh  test_with_cov.sh  towncrier.toml  web.py  worker.py
examp/: .gitignore  Makefile  README.md  gen_CA.py  setup.cfg  setup.py  tasks.py
examp/pfsc_examp/: __init__.py  canon_arithmeticus.py  config.py  contexts.py  display.py  excep.py  util.py
examp/pfsc_examp/calculate/: __init__.py  server_calc.py
examp/pfsc_examp/parameters/: __init__.py  base.py
examp/pfsc_examp/parse/: algebraic.py  display.py  excep.py  polynom.py  sympy_allowed.py  util.py
examp/tests/: test_display.py  test_parameters.py
manage/: .gitignore  README.md  manage.py  pise_python_vers.env  pyproject.toml  sample_conf.py  setup.cfg  setup.py  upgrade_procedure.md
manage/conf/: __init__.py  base_conf.py
manage/conf/user/: README.md
manage/conf_dir/: README.md
manage/tests/: test_wheels.py
manage/tests/selenium/: conftest.py  test_basic_run_01.py  test_basic_run_mca.py  test_basic_run_oca.py  test_foo.py  test_load_test_hist_lit_repo.py  test_login_as_test_hist.py  util.py
manage/tools/: basic.py  build.py  check.py  gdb.py  get.py  grep.py  install.py  license.py  make.py  release.py  repo.py  simple_yaml.py  update.py  util.py  word.py
manage/tools/deploy/: __init__.py  services.py
manage/topics/dummy/: __init__.py
manage/topics/elk/: __init__.py
manage/topics/gremlin/: __init__.py
manage/topics/pfsc/: __init__.py  (+8 more)
(+659 files in other folders)
