[metadata]
name = pfsc-examp
version = attr: pfsc_examp.__version__
license = Apache 2.0
url = https://github.com/proofscape/pfsc-examp
description = Example explorers for Proofscape
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    lark067==0.6.7
    displaylang-sympy>=0.10.4
    displaylang>=0.23.0
    pfsc-util>=0.22.8
    Jinja2>=3.0.3,<4
    MarkupSafe>=2.0.1,<3

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    pytest
    build
    twine
    invoke
