[metadata]
name = pfsc-manage
url = https://github.com/proofscape/pise/tree/main/manage

[options]
py_modules = manage, conf
packages = find:
install_requires =
    click
    Jinja2
    requests
    pytest
    selenium

[options.packages.find]
exclude = tests
include = tools, topics

[options.entry_points]
console_scripts =
    pfsc = manage:cli
