[metadata]
name = pfsc-manage
url = https://github.com/proofscape/pise/tree/main/manage

[options]
# Note: listing `conf` under `py_modules` allows the `pfsc` commandline tool
# to be able to find the conf modules.
py_modules = manage, conf
packages = find:
install_requires =
    click
    python-dotenv
    Jinja2
    requests
    pytest
    selenium

[options.packages.find]
exclude = tests
include = tools, topics

[options.entry_points]
console_scripts =
    pfsc = manage:cli
